--- a/Homework_10/MainWindow.xaml
+++ b/Homework_10/MainWindow.xaml
@@ -39,82 +39,83 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <TextBlock Grid.Row="0" 
+        <TextBlock Grid.Row="0"
                    Margin="15,10,15,4" 
                    Background="NavajoWhite" 
                    Foreground="Black" 
-                   FontStyle="Oblique"/>
+                   FontStyle="Normal"
+                   Padding="5"
+                   Text="{Binding ElementName=logList, Path=SelectedItem.FirstName}">
+        </TextBlock>
         <TextBox Grid.Row="2" 
-                   Margin="15,7,15,7" 
-                   Background="NavajoWhite" 
-                   Foreground="Black" 
-                   FontStyle="Oblique"/>
+                 Margin="15,7,15,7" 
+                 Background="NavajoWhite" 
+                 Foreground="Black" 
+                 FontStyle="Oblique" 
+                 Padding="5"/>
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="15*"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <Image Source="/img_res/send_transp_btn.png" Grid.Column="3" ToolTip="отправить сообщение"/>
+            <Image Source="/img_res/pin_transp_btn.png" Grid.Column="2" ToolTip="каталог файлов на сервере" MouseLeftButtonDown="ExplorerButton_Click"/>
+        </Grid>
         <Grid Grid.Row="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="12*"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="3*"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
-            <Button Name="SendButton" 
-                    Grid.Column="0" 
-                    Margin="4,4,2,4"
-                    Height="40"
-                    Width="40"
-                    BorderThickness="0">
-                <Button.Background>
-                    <ImageBrush ImageSource="/img_res/send_btn.png"/>
-                </Button.Background>
-                <Button.ToolTip>
-                    <ToolTip Content="отправить сообщение" Background="NavajoWhite" Foreground="DarkOliveGreen"/>
-                </Button.ToolTip>
-            </Button>
-            <Button Name="ExplorerButton" 
-                    Grid.Column="1" 
-                    Margin="2,4,2,4" Click="ExplorerButton_Click"
-                    Height="40"
-                    Width="40" BorderThickness="0">
-                <Button.Background>
-                    <ImageBrush ImageSource="/img_res/explorer_btn.png"/>
-                </Button.Background>
-                <Button.ToolTip>
-                    <ToolTip Content="открыть каталог файлов на сервере" Background="NavajoWhite" Foreground="DarkOliveGreen"/>
-                </Button.ToolTip>
-            </Button>
             <Button Name="TrayButton" 
-                    Grid.Column="2" 
+                    Grid.Column="3" 
                     Margin="2,4,2,4" 
                     Click="TrayButton_Click"
-                    Height="40"
-                    Width="40" BorderThickness="0">
+                    Height="30"
+                    Width="30" BorderThickness="0">
                 <Button.Background>
                     <ImageBrush ImageSource="/img_res/minimize_btn.png"/>
                 </Button.Background>
                 <Button.ToolTip>
-                    <ToolTip Content="свернуть в трей" Background="NavajoWhite" Foreground="DarkOliveGreen"/>
+                    <ToolTip Content="свернуть в трей" 
+                             Background="NavajoWhite" 
+                             Foreground="DarkOliveGreen"/>
                 </Button.ToolTip>
             </Button>
             <Button Name="ExitButton" 
-                    Grid.Column="3" 
+                    Grid.Column="4" 
                     Margin="2,4,4,4" 
                     Click="Button_Click"
-                    Height="40"
-                    Width="40"
+                    Height="30"
+                    Width="30"
                     BorderThickness="0">
                 <Button.Background>
                     <ImageBrush ImageSource="/img_res/exit_btn.png"/>
                 </Button.Background>
                 <Button.ToolTip>
-                    <ToolTip Content="выход из приложения" Background="NavajoWhite" Foreground="DarkOliveGreen"/>
+                    <ToolTip Content="выход из приложения" 
+                             Background="NavajoWhite" 
+                             Foreground="DarkOliveGreen"/>
                 </Button.ToolTip>
             </Button>
-            <Button Name="JsonExportButton" Grid.Column="4" Height="40" Width="40" BorderThickness="0">
+            <Button Name="JsonExportButton" 
+                    Grid.Column="1" 
+                    Height="40" 
+                    Width="40" 
+                    BorderThickness="0">
                 <Button.Background>
                     <ImageBrush ImageSource="/img_res/json_export_btn.png"/>
                 </Button.Background>
                 <Button.ToolTip>
-                    <ToolTip Content="экспорт истории сообщений в формат json" Background="NavajoWhite" Foreground="DarkOliveGreen"/>
+                    <ToolTip Content="экспорт истории сообщений в формат json" 
+                             Background="NavajoWhite" 
+                             Foreground="DarkOliveGreen"/>
                 </Button.ToolTip>
             </Button>
         </Grid>
@@ -122,7 +123,9 @@
             Visibility="Visible"
             ToolTipText="ConverterBot"
             IconSource="bot.ico"
-            TrayLeftMouseDown="TrayIcon_Click" Grid.ColumnSpan="2" Margin="0,0,8,0"/>
+            TrayLeftMouseDown="TrayIcon_Click" 
+            Grid.ColumnSpan="2" 
+            Margin="0,0,8,0"/>
     </Grid>
 </Window>
 
