--- a/Homework_10/ImageExplorer.xaml
+++ b/Homework_10/ImageExplorer.xaml
@@ -42,11 +42,13 @@
             </Grid.RowDefinitions>
 
             <TextBlock 
-                x:Name="UserId" 
+                Name="fileName" 
                 Grid.Row="0" 
                 Visibility="Visible" 
                 Background="NavajoWhite" 
-                Margin="2,2,2,2"/>
+                Foreground="DarkOliveGreen"
+                Margin="2,2,2,2"
+                Text="{Binding ElementName=rootContent, Path=SelectedItem.FileName}"/>
             <!--<DataGrid 
                 Margin="2,2,2,2"
                 x:Name="rootContent" 
@@ -105,7 +107,8 @@
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
-                <Button Margin="1,2,2,2"
+                <Button BorderThickness="0"
+                        Margin="1,2,2,2"
                         x:Name="CloseImageExplorer"
                         Grid.Column="2" 
                         Height="30"
@@ -120,6 +123,20 @@
                 </Button>
                 <!--<Button Margin="1,2,1,2" Content="В трей" x:Name="ToTrayImageExplorer" Grid.Column="1" Click="ToTrayImageExplorer_Click"/>-->
                 <Button 
+                    BorderThickness="0"
+                    Margin="34,2,1,2"
+                    Height="30"
+                    Width="30"
+                    Name="Send"
+                    Grid.Column="0"
+                    HorizontalAlignment="Left"
+                    ToolTip="отправить файл собеседнику" Click="Send_Click">
+                    <Button.Background>
+                        <ImageBrush ImageSource="/img_res/send_btn.png"/>
+                    </Button.Background>
+                </Button>
+                <Button 
+                    BorderThickness="0"
                     Margin="2,2,1,2" 
                     Height="30"
                     Width="30"
