--- a/Homework_10/ImageExplorer.xaml
+++ b/Homework_10/ImageExplorer.xaml
@@ -25,12 +25,11 @@
             <ColumnDefinition Width="375*"/>
             <ColumnDefinition Width="15*"/>
         </Grid.ColumnDefinitions>
-        <Image x:Name="PictureContent" Grid.Row="1" Grid.Column="1" Source="/bot_explorer.ico" Margin="10"/>
-        <!--<tb1:TaskbarIcon
-            Visibility="Visible"
-            ToolTipText="ConverterBot"
-            IconSource="bot.ico"
-            TrayLeftMouseDown="TrayIcon_Click" Grid.ColumnSpan="2" Margin="0,0,8,0"/>-->
+        <Image x:Name="PictureContent" 
+               Grid.Row="1" 
+               Grid.Column="1" 
+               Source="bot_explorer.ico"
+               Margin="10"/>
         <Grid 
             x:Name="NavigationBarGrid" 
             Grid.Row="1" 
