--- a/Homework_11_wpfUI/MainWindow.xaml
+++ b/Homework_11_wpfUI/MainWindow.xaml
@@ -10,10 +10,10 @@
         Width="800"
         ResizeMode="NoResize"
         WindowStyle="None"
-        Background="#334666">
+        Background="#334666"
+        KeyDown="OnKeyDown">
 
     <Grid VerticalAlignment="Stretch">
-
         <Grid.RowDefinitions>
             <RowDefinition Height="25"/>
             <RowDefinition Height="425*"/>
@@ -56,12 +56,15 @@
             </MenuItem>
             <Separator Width="10"/>
             <MenuItem Header="Edit" FontSize="12">
-                <MenuItem Header="Create Company" Click="MenuItem_Click">
+                <MenuItem Header="Create Company | ctrl + Q" Click="MenuItem_Click">
                     <MenuItem.Icon>
                         <Image Source="\icon.ico">
                         </Image>
                     </MenuItem.Icon>
                 </MenuItem>
+                <MenuItem Header="Open company department | ctrl + W"  Click="CompanyDepartmentOpen"/>
+                <MenuItem Header="Open company office | ctrl + E" Click="CompanyOfficeOpen"/>
+
             </MenuItem>
         </Menu>
         <Grid Grid.Row="1" Margin="5,5,5,5" Background="#5c6c85" VerticalAlignment="Stretch">
@@ -86,21 +89,22 @@
                 </ListView.View>
                 <ListView.ContextMenu>
                     <ContextMenu>
-                        <MenuItem Header="Уволить"/>
-                        <MenuItem Header="Переименовать"/>
-                        <MenuItem Header="Изменить оплату"/>
+                        <MenuItem Header="Hire"/>
+                        <MenuItem Header="Rename"/>
+                        <MenuItem Header="Set salary"/>
                     </ContextMenu>
                 </ListView.ContextMenu>
             </ListView>
             <ListView 
                 Grid.Row="1" 
                 Grid.Column="0" 
-                Margin="0,0,22,0" 
+                Margin="0,0,5,0" 
                 Background="#5c6c85" 
                 MinWidth="150" 
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Stretch"
-                Name="structContent">
+                Name="structContent"
+                KeyDown="OnListKeyDown">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="name" Width="100" DisplayMemberBinding="{Binding Name}"/>
@@ -111,34 +115,30 @@
                     </GridView>
                 </ListView.View>
                 <ListView.ContextMenu>
-                    <ContextMenu>
+                    <ContextMenu HorizontalAlignment="Left">
                         <MenuItem Header="Open substruct" Name="openSubStruct">
-                            <MenuItem Header="department" Name="openDepatment" Click="openSubStructDep_Click"/>
-                            <MenuItem Header="office" Name="openOffice" Click="openOffice_Click"/>
+                            <MenuItem Header="  ctrl + O | department" Name="openDepatment" Click="openSubStructDep_Click"/>
+                            <MenuItem Header="shift + O | office" Name="openOffice" Click="openOffice_Click"/>
                         </MenuItem>
                         <MenuItem Header="Close substruct"/>
                         <Separator/>
-                        <MenuItem Name="hireSubBoss" Header="Нанять управляющего" Click="HireBossInDep"/>
-                        <MenuItem Header="Уволить управляющего"/>
+                        <MenuItem Name="hireSubBoss" Header="Hire manager" Click="HireBossInDep"/>
+                        <MenuItem Header="Sack manager"/>
                         <Separator/>
-                        <MenuItem Header="Нанять работника" Name="hireWorker" Click="hireWorker_Click"/>
+                        <MenuItem Header="  ctrl + H | Hire new worker" Name="hireWorker" Click="hireWorker_Click"/>
+                        <MenuItem Header="shift + H | Hire new intern" Name="hireIntern" Click="HireIntern_Click"/>
                     </ContextMenu>
                 </ListView.ContextMenu>
             </ListView>
-            <GridSplitter Grid.Column="0" VerticalAlignment="Stretch" Margin="5,0,5,0" Background="#334666" Width="22" >
+            <GridSplitter Grid.Column="0" VerticalAlignment="Stretch" Margin="5,0,5,0" Background="#334666" Width="5" >
 
             </GridSplitter>
 
-            <ScrollBar Grid.Column="0" 
-                       HorizontalAlignment="Right" 
-                       Margin="0,0,10,0" 
-                       Background="#aeb6c3" 
-                       BorderBrush="#8590a6" 
-                       BorderThickness="5" Foreground="Black">
 
-            </ScrollBar>
             <Border Grid.Column="2" BorderBrush="#334666" BorderThickness="5,0,0,0">
-                <TextBlock Grid.Column="2" Background="#8590a6" Padding="5" Margin="0,22,0,0"></TextBlock>
+                <TextBlock Grid.Column="2" Background="#8590a6" Padding="5" Margin="0,22,0,0" 
+                           Text="{Binding ElementName=structContent, Path=SelectedItem}"
+                           ></TextBlock>
             </Border>
             <TextBlock 
                 Name="pathStructOrEmploye" 
@@ -147,10 +147,17 @@
                 Background="#334666" 
                 Foreground="#8590a6"
                 VerticalAlignment="Top"
-                Text="{Binding ElementName=structContent, Path=SelectedItem}"
-                Padding="5"/>
-            <DockPanel HorizontalAlignment="Left" Height="0" LastChildFill="False" Margin="52,185,0,0" VerticalAlignment="Top" Width="13"/>
+                Padding="5"
+                
+                Text="{Binding ElementName=structContent, 
+                Path=SelectedItem.Name}"/>
+            
+            <DockPanel HorizontalAlignment="Left" 
+                       Height="0" 
+                       LastChildFill="False" 
+                       Margin="52,185,0,0"
+                       VerticalAlignment="Top"
+                       Width="13"/>
         </Grid>
-
     </Grid>
 </Window>
